--- a/ACAT_main/package.json
+++ b/ACAT_main/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "fullpage-vue": "^2.1.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
