--- a/ACAT_main/package.json
+++ b/ACAT_main/package.json
@@ -13,7 +13,8 @@
     "animate.css": "^4.1.1",
     "fullpage-vue": "^2.1.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.7"
+    "vue-router": "^3.0.7",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
