--- a/ACAT_main/package.json
+++ b/ACAT_main/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "fullpage-vue": "^2.1.1",
+    "swiper": "^6.0.3",
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.7",
     "vuex": "^3.5.1"
   },
